# TrabalhoComputacaoGraficaM1

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
